--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Nutrition Chart</title>
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="https://d3js.org/d3.v4.min.js"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<style>
 			.legend {
 				font-size: 12px;
@@ -10,8 +13,12 @@
 			rect {
 				stroke-width: 2;
 			}
-			h2 {
+			h2, h4 {
 				text-align: center;
+			}
+			h4 {
+				margin-top: 0px;
+				margin-bottom: 30px;
 			}
 			.centering {
 				display: flex;
@@ -28,9 +35,6 @@
 				margin-top: 5px;
 			}
 		</style>
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script src="https://d3js.org/d3.v4.min.js"></script>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -66,6 +70,7 @@
 				{ label: 'Carbohydrates', count: 1, percent: 0 },
 				{ label: 'Fat', count: 1, percent: 0 }
 			];
+			var caloriesTotal = 0;
 
 			function searchFood() {
 				var search = $('#search').val();
@@ -78,6 +83,7 @@
 						{ label: 'Fat', count: 1 }
 					];
 
+					var calories = JSON.parse(res.body).calories;
 					var foodMatch = JSON.parse(res.body).ingredients[0].parsed[0].foodMatch;
 					var quantity = JSON.parse(res.body).ingredients[0].parsed[0].quantity;
 					var measure = JSON.parse(res.body).ingredients[0].parsed[0].measure;
@@ -103,6 +109,8 @@
 					} else {
 						foodDesc = '';
 					}
+
+					$('#chart').prepend('<h4>' + 'Calories: ' + calories + '</h4>');
 
 					var color = d3.scaleOrdinal(d3.schemeCategory10);
 					// var color = d3.scaleOrdinal()
@@ -326,7 +334,10 @@
 						.attr('y', legendRectSize - legendSpacing)
 						.text(function(d) { return d; });
 
+					caloriesTotal += calories;
+
 					$('#chartTotal').prepend('<h2>' + 'Total Daily Amounts' + '</h2>');
+					$('#chartTotal').append('<h4>' + 'Calories: ' + caloriesTotal + '</h4>');
 				});
 			}
 
