Add CORS fix, components, AddNewFoodItem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div class="centering">
 						<form class="form-inline" onsubmit="event.preventDefault()">
 							<div class="form-group">
-								<input class="form-control" placeholder="Food item" type="text" id="search" autofocus>
+								<input class="form-control" placeholder="Food item" type="text" id="search" autofocus />
 								<button class="btn btn-default" onclick="searchFood()">Add Food Item</button>
 							</div>
 						</form>
