--- a/nutriview/index.html
+++ b/nutriview/index.html
@@ -6,8 +6,9 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
-  <body>
-    <div class="container"></div>
+  <body  style="background-color: #5cb85c">
+    <div class="react"></div>
+    <!-- <div class="container"></div> -->
   </body>
   <script src="/bundle.js"></script>
 </html>
